--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,6 +1,6 @@
 javax.validation.constraints.NotNull.message={0} \u00e9 obrigat\u00f3rio(a)
 javax.validation.constraints.NotBlank.message={0} \u00e9 obrigat\u00f3rio(a)
 javax.validation.constraints.Email.message={0} formatado como email (exemplo@email.com)
-javax.validation.constraints.CNPJ.message={0} formatado como CNPJ (xx.xxx.xxx/xxxx-xx)
 javax.validation.constraints.Size.message={0} deve ter o tamanho entre {min} e {max}
-org.hibernate.validator.constraints.br.CPF.message={0}formatado como CPF (xxx.xxx.xxx-xx)
+org.hibernate.validator.constraints.br.CPF.message={0} deve ser formatado como CPF (xxx.xxx.xxx-xx) e ser v\u00E1lido!
+org.hibernate.validator.constraints.br.CNPJ.message={0} deve ser formatado como CNPJ (xx.xxx.xxx/xxxx-xx) e ser v\u00E1lido!
